--- a/index.html
+++ b/index.html
@@ -18,60 +18,7 @@
       </div>
       <br>
       <br>
-<!--     
-      <div class="row mt-3">
-        <div class="col-lg-2 col-12">
-          <p class="text-primary text-lg-end text-center">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Yawen Lu
-            <sup class="text-dark"> 1+ </sup>  
-          </p>
-        </div>
-        <div class="col-lg-2 col-12">
-          <p class="text-primary text-lg-end text-center">
-            Yunhan Huang
-            <sup class="text-dark"> 1+ </sup> 
-          </p>
-        </div>
-        <div class="col-lg-2 col-12">
-          <p class="text-primary text-center">
-            Sun Su
-            <sup class="text-dark"> 1+ </sup> 
-          </p>
-        </div>
-        <!-- <div class="col-lg-2 col-12">
-          <p class="text-primary text-center">
-            Tansi Zhang
-            <sup class="text-dark"> 1 </sup>
-          </p>
-        </div> -->
-        <!-- <div class="col-lg-2 col-12">
-          <p class="text-primary text-lg-start text-center">
-            Songlin Fei
-            <sup class="text-dark"> 2 </sup> 
-          </p>
-        </div>
-        <div class="col-lg-2 col-12">
-          <p class="text-primary text-lg-start text-center">
-            Victor Chen
-            <sup class="text-dark"> 1 </sup> 
-          </p>
-        </div>
-      </div>
 
-      <div class="row mt-3 d-flex">
-        <div class="col-12 justify-content-center">
-          <p class="text-center fw-bolder">
-            <sup> 1 </sup>
-            Computer Graphics Technology, Purdue University
-          </p>
-        </div>
-        <div class="col-12 justify-content-center">
-          <p class="text-center fw-bolder">
-            <sup> 2 </sup>
-            Forestry and Natural Resources, Purdue University
-          </p>
-        </div>
-      </div> -->
 
       
 
@@ -142,7 +89,7 @@
           <div
             class="d-flex flex-column justify-content-center align-items-center"
           >
-            <a class="icons" href="https://virtual-forest-multimodal.github.io/Virtual-Forest-Multimodal/" target="_blank"><img src="./img/image-003.png" alt="" class="img-fluid mb-3 w-50" /></a>
+            <a class="icons" href="https://lidar-simulate.github.io/LiDAR_simulate/" target="_blank"><img src="./img/image-003.png" alt="" class="img-fluid mb-3 w-50" /></a>
             <a class="icons" href="https://www.dropbox.com/scl/fo/5q4z0ufv4nijepkfk1n73/h?rlkey=ugldzbaeawaafh5l8micx03s9&dl=0" target="_blank"><img src="./img/image-004.png" alt="" class="img-fluid w-50" /></a>
           </div>
         </div>
